--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,6 +9,7 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Cabin:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+   <script src="https://kit.fontawesome.com/9e560ee8e6.js" crossorigin="anonymous"></script>
 </head>
 <body>
    <app-root></app-root>
